# learn-sycl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  all-device.cpp  hello-world.cpp  matrix-multiply.cpp  util.hpp  vector-add.cpp  vector-sum.cpp  vtune-backend.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/linux/: devcontainer.json
.devcontainer/wsl/: devcontainer.json
src/: util.hpp
src/001-basic/: id-mapping.cpp  named-function-object.cpp  named-kernel.cpp  sub-group-mapping.cpp  vec-type.cpp
src/002-device/: query-all-device.cpp  query-gpu-info.cpp  query-xmx-info.cpp
src/002-device-info/: device-util.hpp  intel-gpu-info.cpp  query-all-device.cpp
src/003-memory/: allocate-memory.cpp  host-device-memcpy-bench.cpp  local-memory.cpp  mem_access_efficiency.cpp
src/003-vector/: vector-add.cpp  vector-copy.cpp
src/003-vector-add/: vector-add.cpp
src/004-vector/: vector-add.cpp  vector-copy.cpp  vector-dot.cpp  vector-sum.cpp
src/004-vector-sum/: vector-sum.cpp
src/005-matrix/: matrix-multiply-xmx.cpp  matrix-multiply.cpp  matrix-transpose.cpp  matrix-vector-multiply.cpp
src/020-device-info/: intel-gpu-info.cpp  query-all-device.cpp
src/021-nd-range-kernel/: sub-group-mapping.cpp
src/030-vector-add/: vector-add.cpp
src/050-matrix-multiply/: matrix-multiply.cpp
src/util/: bench.hpp  device.hpp  matrix.hpp  memory.hpp  sycl.hpp  util.hpp  validate.hpp  vector.hpp
